--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "7.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-webp": "^4.0.1",
     "readable-stream": "^3.4.0",
     "webpack": "^5.10.0",
